--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="ProdValue/style.css">
     <title>ProdValue</title>
 </head>
 <body>
@@ -54,7 +54,7 @@
                 <p id = "resultado"></p>
             </section>
 
-            <img id="imgIlustracao" src="img.png" alt="">
+            <img id="imgIlustracao" src="ProdValue/img.png" alt="">
 
         </main>
     </div>
@@ -65,6 +65,6 @@
 		<a href="https://github.com/LucasMFP">GitHub</a> 
 		<a href="https://www.instagram.com/lucas.fernandes/">Instagram</a></p>
 
-    <script src="interativ.js"></script>
+    <script src="ProdValue/interativ.js"></script>
 </body>
 </html>
